--- a/templates/public/proposition_show.html.twig
+++ b/templates/public/proposition_show.html.twig
@@ -178,7 +178,7 @@
                                                         </div>
                                                     {% endif %}
                                                 </div>
-                                                <a href="{{ path('app_candidate_list_show', {id: listData.candidateList.id}) }}"
+                                                <a href="{{ path('app_candidate_list_show', {id: listData.candidateList.id, slug: listData.candidateList.slug}) }}"
                                                    class="btn btn-outline-primary btn-sm">
                                                     <i class="fas fa-eye"></i>
                                                 </a>
