--- a/templates/public/candidate_lists_index.html.twig
+++ b/templates/public/candidate_lists_index.html.twig
@@ -98,7 +98,7 @@
                                             </td>
                                             <td>
                                                 <div class="btn-group btn-group-sm">
-                                                    <a href="{{ path('app_candidate_list_show', {id: candidateList.id}) }}"
+                                                    <a href="{{ path('app_candidate_list_show', {id: candidateList.id, slug: candidateList.slug}) }}"
                                                        class="btn btn-outline-primary btn-sm"
                                                        title="Voir le profil">
                                                         <i class="fas fa-eye"></i>
